Fixed main footer layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,15 @@ h1 {
     background-color: #3C5162;
     position: absolute;
     bottom: 0;
-    height: 10vh;
+    height: 20vh;
     width: 50vw;
     padding-right: 5%;
     padding-left: 5%;
-    padding-bottom: 10vh;
     display: flex;
+    padding-bottom: 10vh;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .main-footer h3 {
